Encounters layout, Subscribers form. Space between multiple buttons. Fix for checkbox and radio buttons alignment.

--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -122,3 +122,7 @@
   font-weight: 300;
   vertical-align: baseline;
 }
+
+[class^="btn"] + [class^="btn"] {
+  margin-left: 30px;
+}
